Sun May 10 11:36:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_instance_p): new function to check if
	  the argument is an instance of DL::CFunc.

	* ext/dl/cptr.c (rb_dlptr_initialize, rb_dlptr_s_malloc): checks
	  if DL::CFunc.  [ruby-dev:38403].

	* ext/dl/lib/dl/cparser.rb (DL::CParser#parse_signature): strips
	  spaces.  based on a patch from Takashi Tamura in [ruby-dev:38398].

	* ext/dl/lib/dl/value.rb (DL::ValueUtil#wrap_arg): block must be
	  given if arg is not bound.  [ruby-dev:38404]

	* ext/dl/cfunc.c (rb_dlcfunc_instance_p): new function to check if
	  the argument is an instance of DL::CFunc.

Sat May  9 11:14:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_catch): gets rid of issue with gcc 4.4.  a patch
	  from Alexey Froloff in [ruby-core:23398].  [ruby-core:22924]

Thu May  7 21:42:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rubyoptions.rb (test_indentation_check): add a test
	  for indentation check.  [ruby-dev:38382]

Thu May  7 16:40:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_flatten_bang): returns nil if nothing changed.
	  a patch from Marc-Andre Lafortune in [ruby-core:23382].

Thu May  7 14:26:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sample): negative sample number is invalid.
	  [ruby-core:23374]

Tue May 12 14:35:29 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* win32/Makefile.sub: fixes build failures on win32.
	  fixed by usa.

Tue May 12 13:43:35 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* win32/Makefile.sub: fixes a mistake in merging r22822.

Sun Mar  8 23:02:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (LDFLAGS): always prepends -link.

Mon May 11 23:14:06 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/dl/dl.c (rb_dlhandle_initialize): prohibits DL::dlopen
	  with a tainted name of library.
	  Patch by sheepman <sheepman AT sheepman.sakura.ne.jp>.
